      and "b : B ==> Q1 b"
          "b : B ==> Q2 b"
          "b : B ==> Q3 b"
  proof (induct set: A B)

* Provers/induct: support coinduction as well.  See
src/HOL/Library/Coinductive_List.thy for various examples.

* Provers/classical: removed obsolete classical version of elim_format
attribute; classical elim/dest rules are now treated uniformly when
manipulating the claset.

* Syntax: input syntax now supports dummy variable binding "%_. b",
where the body does not mention the bound variable.  Note that dummy
patterns implicitly depend on their context of bounds, which makes
"{_. _}" match any set comprehension as expected.  Potential
INCOMPATIBILITY -- parse translations need to cope with syntactic
constant "_idtdummy" in the binding position.

* Syntax: removed obsolete syntactic constant "_K" and its associated
parse translation.  INCOMPATIBILITY -- use dummy abstraction instead,
for example "A -> B" => "Pi A (%_. B)".


*** HOL ***

* Alternative iff syntax "A <-> B" for equality on bool (with priority
25 like -->); output depends on the "iff" print_mode, the default is
"A = B" (with priority 50).

* In the context of the assumption "~(s = t)" the Simplifier rewrites
"t = s" to False (by simproc "neq_simproc").  For backward
compatibility this can be disabled by ML "reset use_neq_simproc".

* Tactics 'sat' and 'satx' reimplemented, several improvements: goals
no longer need to be stated as "<prems> ==> False", equivalences (i.e.
"=" on type bool) are handled, variable names of the form "lit_<n>"
are no longer reserved, significant speedup.

* inductive and datatype: provide projections of mutual rules, bundled
as foo_bar.inducts;

* Library: added theory Coinductive_List of potentially infinite lists
as greatest fixed-point.


*** ML ***

* Pure/library:

  val burrow: ('a list -> 'b list) -> 'a list list -> 'b list list
  val fold_burrow: ('a list -> 'c -> 'b list * 'd) -> 'a list list -> 'c -> 'b list list * 'd
